refactor(ast): replaces the generic LiteralExpression with a sealed hierarchy of typed literals.
Eliminates LiteralExpression(Object value) which caused loss of type information and ambiguity between different SQL types (e.g., '123' vs. 123).

Architectural Changes:

- Adds sealed Literal interface (extends Expression) allowing only StringLiteral, NumberLiteral, BooleanLiteral, and NullLiteral.

- NumberLiteral: uses BigDecimal internally to preserve SQL precision (replaces Double/Integer which caused decimal rounding).

- NullLiteral: implements Singleton (INSTANCE) pattern instead of null Object, eliminating ambiguity between "missing value" and "SQL NULL".

- StringLiteral: immutable record ensuring consistent charset handling.

Refactoring in Visitors:

- AstInsertBuilder: buildLiteral() now returns specific types; List of values ​​typed as List<Literal>
- AstSelectBuilder: visitLiteral() returns a concrete Literal instead of a generic LiteralExpression

- AstCreateTableBuilder: default values ​​using sealed hierarchy, removed

parseDefaultValue() deprecated

Benefits:

- Type Safety: compiled distinction between SQL types (string vs number)

- Pattern Matching: exhaustive switch without casts or manual instanceof

- Basis for Constant Folding: optimization of literal expressions at semantic analysis time

- Preparation for COLLATE: StringLiteral can receive collation without altering hierarchy

Breaking Change: Consumers of LiteralExpression should migrate to Pattern Matching (switch) or rawValue().